--- a/style.css
+++ b/style.css
@@ -1,104 +1,119 @@
 body {
-    background: url(wood.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+  background: url(wood.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .cardFaceUp {
-    height: 100px;
-    width: 75px;
-    border: 8px solid white;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 200ms ease-in-out;
-    margin-right: -40px;
-    position: relative;
-    box-shadow: 5px 5px 5px rgb(54, 39, 29);
+  height: 100px;
+  width: 75px;
+  border: 8px solid white;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 200ms ease-in-out;
+  margin-right: -40px;
+  position: relative;
+  box-shadow: 5px 5px 5px rgb(54, 39, 29);
 }
 .cardFaceUp img {
-    position: absolute;
+  position: absolute;
 }
 .cardFaceUp:first-child {
-    margin-left: -40px;
+  margin-left: -40px;
 }
 .cardFaceUp:hover {
-    margin-right: 2px;
+  margin-right: 2px;
 }
 .cardFaceUp:last-child:hover {
-    margin-right: -40px;
+  margin-right: -40px;
 }
 #userCardBox {
-    width: 100%; 
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    left: 0;
-    bottom: 5vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  left: 0;
+  bottom: 5vh;
 }
 .oval {
-    width: 90%;
-    height: 70%;
-    background-color: white;
-    border-radius: 80% 20% 80% 20%;
-    position: absolute;
+  width: 90%;
+  height: 70%;
+  background-color: white;
+  border-radius: 80% 20% 80% 20%;
+  position: absolute;
 }
 .cardFaceDown {
-    height: 100px;
-    width: 75px;
-    border: 8px solid white;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: -40px;
-    position: relative;
-    box-shadow: 5px 5px 5px rgb(54, 39, 29);
+  height: 100px;
+  width: 75px;
+  border: 8px solid white;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: -40px;
+  position: relative;
+  box-shadow: 5px 5px 5px rgb(54, 39, 29);
 }
 .cpuCardBox {
-    display: flex;
-    justify-content: center;
-    position: absolute;
+  display: flex;
+  justify-content: center;
+  position: absolute;
 }
 #cpu1 {
-    top: 45%;
-    left: 8%;
+  top: 45%;
+  left: 8%;
 }
 #cpu2 {
-    top: 5%;
-    left: 45%;
+  top: 5%;
+  left: 45%;
 }
 #cpu3 {
-    top: 45%;
-    right: 8%;
+  top: 45%;
+  right: 8%;
+}
+#deck-and-discard {
+  position: absolute;
+  top: 45%;
+  left: 47%;
+  display: flex;
+}
+#discard .cardFaceUp {
+  margin-right: 20px;
 }
 #deck {
-    position: absolute;
-    display: flex;
-    /* justify-content: center; */
-    /* align-items: center; */
-    left: 47%;
-    top: 45%;
+  display: flex;
 }
 #deck .cardFaceDown {
-    margin-left: 0;
-    position: absolute;
+  /* margin-left: 0; */
+  position: absolute;
 }
 .red {
-    background-color: #D72600;
+  background-color: #d72600;
 }
 .blue {
-    background-color: #0956BF;
+  background-color: #0956bf;
 }
 .green {
-    background-color: #379711;
+  background-color: #379711;
 }
 .yellow {
-    background-color: #ECD407;
+  background-color: #ecd407;
 }
 .black {
-    background-color: black;
+  background-color: black;
 }
 .rainbow {
-    background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+  background: linear-gradient(
+    to right,
+    #ef5350,
+    #f48fb1,
+    #7e57c2,
+    #2196f3,
+    #26c6da,
+    #43a047,
+    #eeff41,
+    #f9a825,
+    #ff5722
+  );
 }
