--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   background: url(wood.png);
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .cardFaceUp {
   height: 100px;
@@ -72,12 +73,31 @@ body {
   top: 45%;
   right: 8%;
 }
+.cpuCardBox .count {
+  position: absolute;
+  top: 120%;
+  left: 40%;
+  background-color: black;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  border-radius: 2rem;
+  padding: 0.5rem 1rem;
+  box-shadow: 5px 5px 5px rgb(54, 39, 29);
+}
+.cpuCardBox .nickname {
+  width: 110%;
+  position: absolute;
+  top: -25%;
+  left: 25%;
+  font-size: 110%;
+  font-weight: bold;
+}
 #deck-and-discard {
   position: absolute;
   top: 45%;
   left: 47%;
   display: flex;
-  pointer-events: none;
 }
 #discard .cardFaceUp {
   margin-right: 20px;
