--- a/style.css
+++ b/style.css
@@ -60,6 +60,9 @@ body {
   display: flex;
   justify-content: center;
   position: absolute;
+  /* border: 1px solid black; */
+  width: 200px;
+  padding-right: 40px;
 }
 #cpu1 {
   top: 45%;
@@ -67,7 +70,7 @@ body {
 }
 #cpu2 {
   top: 5%;
-  left: 45%;
+  left: 43%;
 }
 #cpu3 {
   top: 45%;
@@ -76,7 +79,7 @@ body {
 .cpuCardBox .count {
   position: absolute;
   top: 120%;
-  left: 40%;
+  left: 35%;
   background-color: black;
   color: white;
   font-size: 2rem;
@@ -86,10 +89,10 @@ body {
   box-shadow: 5px 5px 5px rgb(54, 39, 29);
 }
 .cpuCardBox .nickname {
-  width: 110%;
+  /* width: 200%; */
   position: absolute;
   top: -25%;
-  left: 25%;
+  left: 15%;
   font-size: 110%;
   font-weight: bold;
 }
